<!--
  ~   Copyright 2015, Tanmay Parikh
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Blip</string>
    <string name="version" translatable="false">1.0.11</string>
    <string name="action_download_all_comics">Downloading Comics</string>
    <string name="action_download_all_comics_caption">About 2MB to Download</string>
    <string name="action_download_all_comics_explain">Comics need to be Downloaded</string>
    <string name="action_download_all_comics_explain_caption">About 2MB of text data needs to be downloaded to make the app experience fluid and support the search functionality</string>
    <string name="button_start_download">Start Download</string>
    <string name="title_dialog_transcript">Transcript</string>
    <string name="title_dialog_restart">Restart Required</string>
    <string name="content_dialog_restart">App needs to be restarted for the changes to take effect</string>
    <string name="positive_text_restart">Restart</string>
    <string name="negative_text_dialog">Close</string>
    <string name="neutral_text_dialog_speak">Speak</string>
    <string name="message_no_transcript">No transcript was found for this comic</string>
    <string name="title_menu_random">Random</string>
    <string name="title_menu_feed">Comics</string>
    <string name="title_menu_extras">Extras</string>
    <string name="title_menu_fav">Favourites</string>
    <string name="title_menu_whatif">What If?</string>
    <string name="title_menu_search">Search</string>
    <string name="title_menu_donate">Donate</string>
    <string name="title_menu_about">About</string>
    <string name="title_menu_settings">Settings</string>
    <string name="hint_search">Title or Comic No.</string>
    <string name="hint_search_transcript">Title, Comic No, Transcript</string>
    <string name="tip_share_image_url">Link</string>
    <string name="tip_share_image">Image</string>
    <string name="tip_share_image_help">Choose if you want to share the image or the link to the image with your friends</string>
    <string name="title_app_source">Source Code</string>
    <string name="title_open_source_licenses">Open Source Licenses</string>
    <string name="title_developer">Developer</string>
    <string name="setting_hide_title">Hide Comic Title from Feed</string>
    <string name="setting_hide_title_subhead">Titles will be hidden from the cards, they will only be visible in enlarged view</string>
    <string name="setting_search_transcript">Search through Transcripts</string>
    <string name="setting_search_transcript_subhead">Extends the search filters to include transcripts too</string>
    <string name="setting_night_mode">Enable Night Mode</string>
    <string name="setting_night_mode_subhead">Turns text to white color on dark background</string>
    <string name="setting_spoilerize_alt">Sopilerize alt text</string>
    <string name="setting_spoilerize_alt_subhead">Hides the alt text at the bottom of the image to the right</string>
    <string name="title_notification_new_comic">New xkcd Comic Posted!</string>
    <string name="title_pager_alt_spoiler">SPOILERS</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_unfavourite">Unfavourite</string>
    <string name="action_share">Share</string>
    <string name="item_bottom_sheet_explain">Explanation</string>
    <string name="item_bottom_sheet_open_in_browser">Open in Browser</string>
    <string name="item_bottom_sheet_transcript">Transcript</string>
    <string name="title_menu_download">Download Comics</string>
    <string name="tip_download_success">Download Complete</string>
    <string name="tip_download_fail">Download Failed</string>
    <string name="tip_download_complete">All comics have been downloaded</string>
    <string name="tip_download_incomplete">Download comic metadata to decrease load times for comics and increase the effectiveness and speed of search.\n\nOnly metadata will be downloaded and not the images so dont worry about blowing through your data caps.</string>
    <string name="title_setting_display">Display</string>
    <string name="item_settings_notification_update_1">3 Hours</string>
    <string name="item_settings_notification_update_2">6 Hours</string>
    <string name="item_settings_notification_update_3">12</string>
    <string name="item_settings_notification_update_4">1 Day</string>
    <string name="title_menu_sort">Sort</string>
    <string name="dialog_option_copy">Copy</string>
</resources>
